--- a/output.css
+++ b/output.css
@@ -612,6 +612,10 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .-left-20 {
   left: -5rem;
 }
@@ -660,10 +664,6 @@ video {
   top: 18px;
 }
 
-.top-\[280px\] {
-  top: 280px;
-}
-
 .top-\[300px\] {
   top: 300px;
 }
@@ -672,12 +672,28 @@ video {
   top: 100%;
 }
 
-.z-10 {
-  z-index: 10;
+.right-6 {
+  right: 1.5rem;
 }
 
-.z-20 {
-  z-index: 20;
+.right-4 {
+  right: 1rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-30 {
@@ -903,10 +919,6 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .w-11 {
   width: 2.75rem;
 }
@@ -917,10 +929,6 @@ video {
 
 .w-14 {
   width: 3.5rem;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
 }
 
 .w-20 {
@@ -992,6 +1000,22 @@ video {
   width: 100%;
 }
 
+.w-\[full\] {
+  width: full;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1010,6 +1034,10 @@ video {
 
 .max-w-\[800px\] {
   max-width: 800px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .transform {
@@ -1126,6 +1154,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1240,6 +1272,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-l-\[1px\] {
+  border-left-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -1291,6 +1327,10 @@ video {
 .border-slate-200 {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
+}
+
+.border-l-\[1\] {
+  border-left-color: 1;
 }
 
 .bg-\[\#2bc48a\] {
@@ -1758,6 +1798,15 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#AB71F2\] {
+  --tw-text-opacity: 1;
+  color: rgb(171 113 242 / var(--tw-text-opacity, 1));
+}
+
 .accent-\[\#A271F2\] {
   accent-color: #A271F2;
 }
@@ -1942,6 +1991,16 @@ html {
   .static_info{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
+}
+
+.placeholder\:text-xs::-moz-placeholder {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.placeholder\:text-xs::placeholder {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .placeholder\:font-semibold::-moz-placeholder {
@@ -2321,6 +2380,10 @@ html {
     width: fit-content;
   }
 
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2413,6 +2476,26 @@ html {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:placeholder\:text-xs::-moz-placeholder {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .md\:placeholder\:text-xs::placeholder {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .md\:placeholder\:text-base::-moz-placeholder {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:placeholder\:text-base::placeholder {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -2495,10 +2578,6 @@ html {
     width: max-content;
   }
 
-  .lg\:max-w-\[1000px\] {
-    max-width: 1000px;
-  }
-
   .lg\:max-w-none {
     max-width: none;
   }
@@ -2535,6 +2614,10 @@ html {
     padding: 1.5rem;
   }
 
+  .lg\:p-7 {
+    padding: 1.75rem;
+  }
+
   .lg\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -2565,6 +2648,15 @@ html {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-\[15px\] {
+    font-size: 15px;
   }
 }
 
